<resources>
    <string name="app_name">AppTech Task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signin">Signin</string>
    <string name="rs_symbol">\u20B9</string>
    <string name="login">Login</string>
    <string name="pleace_login_to_your_account">Pleace login to your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="dont_t_have_an_account">Dont\'t have an account?</string>
    <string name="register">Register</string>
    <string name="pleace_enter_details_to_register">Pleace enter details to register</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>

    <string name="already_have_an_account">Already have an account?</string>
</resources>